@@ -68,8 +68,13 @@
       },
       {
         "level": 16,
-        "note": "Alpha 14",
-        "skillId": 70
+        "note": "Alpha 12",
+        "skillId": 31
+      },
+      {
+        "level": 16,
+        "note": "Alpha 12",
+        "skillId": 32
       },
       {
         "level": 18,
@@ -983,16 +988,6 @@
         "level": 13,
         "note": "Alpha 14",
         "skillId": 78
-      },
-      {
-        "level": 15,
-        "note": "Alpha 12",
-        "skillId": 31
-      },
-      {
-        "level": 15,
-        "note": "Alpha 12",
-        "skillId": 32
       },
       {
         "level": 17,
@@ -2864,6 +2859,11 @@
         "level": 17,
         "note": "Alpha 14",
         "skillId": 67
+      },
+      {
+        "level": 18,
+        "note": "Alpha 14",
+        "skillId": 70
       },
       {
         "level": 20,
