@@ -335,10 +335,13 @@ Changes:
  - A huge amount of unnecessary, repetitive, and downright boring dialogue has been culled from the game. Most cutscenes have been made much shorter, and many have even been removed entirely.
  - Many cutscenes and important events have been restructured to make gameplay feel smoother.
  - Replaced Player 2's 2nd magic equip slot with an offhand slot (light shields).
+ - Skill pools were shuffled around:
+  ~ Magic Resistance/Proneness now learned by Player 1 at level 16 (was originally learned by Player 2 at level 15).
+  ~ Shield Break now learned by Player 4 at level 18 (was originally learned by Player 1 at level 16).
+  ~ Cut Down now learned by Player 1 by equipping an axe (was originally learned by Player 1 at level 11).
  - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
  - Overhauled the equip comparison menu.
  - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
- - Cut Down is no longer learned by Player 1 at level 11 and is instead provided by equipping any axe.
  - Fleshed out the salvaging system, making many items throughout the game now salvageable.
  - Leveling up will also remove all debuffs.
  - Many shop stocks and enemy drop pools have been modified.
